refactor(android): split terminal host ownership